--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,15 +1,26 @@
 .header {
+  padding: 2px;
+  padding-left: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px;
   background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 }
 
 .logo img {
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
+}
+
+.text-logo {
+  padding-left: 10px;
+  padding-bottom: 4px;
+}
+
+.header-text {
+  color: black;
+  font-size: 18px;
 }
 
 .search-container input {
@@ -17,4 +28,23 @@
   width: 250px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+span {
+  font-size: 16px;
+}
+
+header .logo {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: flex;
+  align-items: center;
+}
+
+p {
+  color: #939292;
+  padding-left: 5px;
+  font-size: 14px;
+  margin: 0;
+  font-style: italic;
 }
