--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,11 @@
 <header class="header">
   <div class="logo">
-    <img src="/src/assets/favicon.png" alt="Logo" />
-    <span>Teste de Desenvolvedor Front-End - Anota AI</span>
-    <p>Alvaro Junior da Silva Santos</p>
+    <img src="/assets/favicon.png" alt="Logo" />
+    <div class="text-logo">
+      <span class="header-text"
+        >Teste de Desenvolvedor Front-End - Anota AI</span
+      >
+      <p>– Alvaro Junior da Silva Santos ———</p>
+    </div>
   </div>
 </header>
