--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
 body {
   margin: 0px;
+  font-family: sans-serif;
+  background-color: #efefef;
+  color: #1d1c1c;
 }
